--- a/style.css
+++ b/style.css
@@ -82,26 +82,38 @@ video{
 }
 
 @media (max-width:1070px){
-video {
-  left: 32%;
-}
+  video {
+    left: 32%;
+  }
 }
 @media (max-width:900px){
-video {
-  left: 28%;
-  width: 39%;
-}
+  video {
+    left: 28%;
+    width: 39%;
+  }
 }
 @media (max-width:600px){
-video {
-  left: 23%;
-  width: 45%;
-  height: 55%;
-}
+  video {
+    left: 23%;
+    width: 45%;
+    height: 55%;
+  }
 }
 @media (max-width:500px){
-video {
-  left: 9%;
-  width: 77%;
+  video {
+    left: 9%;
+    width: 77%;
+  }
 }
+@media (max-width:430px){
+  .option-container {
+    margin: 70px -15px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  .score-container{
+    gap: 30px;
+  }
 }
+
