--- a/style.css
+++ b/style.css
@@ -104,6 +104,13 @@ video{
     left: 9%;
     width: 77%;
   }
+    main{
+    margin: auto;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+  }
 }
 @media (max-width:430px){
   .option-container {
